--- a/SmartContactManager/src/main/resources/application.properties
+++ b/SmartContactManager/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=Mayank@122333
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
